Refactor seat/showtime cleanup & weekly schedule